# classic-http-api

./: .gitignore  README.md  setup.cfg
sources/classic/http_api/: __init__.py  app.py  error_handlers.py  specification.py  utils.py
sources/classic/http_api/authentication/: __init__.py  base.py  fallback.py  jwt_.py
tests/: get_melts.http  get_some_obj.http  post_some_obj.http  test_app.py  test_spec.py
