[metadata]
name = classic-http-api
version = 0.0.2
description = Provides wrapper around Falcon web framework, adding class-app-layer support
author = Sergei Variasov
author_email = variasov@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/variasov/classic_http_api
project_urls =
    Bug Tracker = https://github.com/variasov/classic_http_api/issues
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta


[options]
packages = find_namespace:
python_requires = >=3.7
package_dir =
    = sources
install_requires =
    falcon~=3.0.1
    pydantic~=1.8.2
    classic-components~=0.0.1
    classic-app-layer~=0.0.1


[options.packages.find]
where = sources

[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    twine~=3.4.2
    build~=0.7.0
