[metadata]
name = classic-http-api
version = 2.1.0
description = Provides wrapper around Falcon web framework, adding class-app-layer support
author = Sergei Variasov
author_email = variasov@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/variasov/classic-http-api
project_urls =
    Bug Tracker = https://github.com/variasov/classic-http-api/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta


[options]
packages = find_namespace:
python_requires = >=3.10
package_dir =
    = sources
install_requires =
    falcon~=3.1
    classic-components~=1.2
    classic-error-handling~=0.1
    msgspec~=0.18
    defspec~=0.1


[options.packages.find]
where = sources

[options.extras_require]
dev =
    pytest~=7.4.4
    pytest-cov~=4.1
    twine~=4.0
    build~=1.0
